# GESTIONE-UNIVERSITA-E-PROGRAMMAZIONE-ESAMI

./: Anno_Accademico.cpp  Anno_Accademico.h  Aula.cpp  Aula.h  BaseDati.cpp  BaseDati.h  CMakeLists.txt  Corso.cpp  Corso.h  Corso_di_Studio.cpp  Corso_di_Studio.h  Data.cpp  Data.h  Eccezioni.cpp  Eccezioni.h  Elenco_Esame.cpp  Elenco_Esame.h  Esame.cpp  Esame.h  Fascia_Oraria.cpp  Fascia_Oraria.h  Giorno_Sessione.cpp  Giorno_Sessione.h  Indisponibile.cpp  Indisponibile.h  Indisponibilita.cpp  Indisponibilita.h  Periodo.cpp  Periodo.h  Periodo_Esami.cpp  Periodo_Esami.h  Persona.cpp  Persona.h  Professore.cpp  Professore.h  README.md  Scheduling.cpp  Scheduling.h  Semestre.cpp  Semestre.h  (+5 more)
